--- a/OOP.ipynb
+++ b/OOP.ipynb
@@ -208,8 +208,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "2de29942",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter name = ram\n",
+      "Enter age = 43\n",
+      "Enter add = ktm\n",
+      "Hello I am ram. I am 43 of age. I am from ktm.\n",
+      "ram\n",
+      "ram\n",
+      "ramGopal\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Info:\n",
+    "    def __init__(self):\n",
+    "        self.name=input(\"Enter name = \")\n",
+    "        self.age=int(input(\"Enter age = \"))\n",
+    "        self.add=input(\"Enter add = \")\n",
+    "        \n",
+    "    def __str__(self):\n",
+    "        \n",
+    "        return self.name\n",
+    "    def info(self):\n",
+    "        print(f\"Hello I am {self.name}. I am {self.age} of age. I am from {self.add}.\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "obj=Info()\n",
+    "obj.info()\n",
+    "print(obj)\n",
+    "print(obj.__str__())\n",
+    "print(str(obj)+\"Gopal\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb4ed829",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -217,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb4ed829",
+   "id": "fd925f25",
    "metadata": {},
    "outputs": [],
    "source": []
