--- a/Exception_handling.ipynb
+++ b/Exception_handling.ipynb
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "5f47718c",
    "metadata": {},
    "outputs": [
@@ -243,19 +243,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter age 45\n",
-      "Your age is  45\n"
+      "Enter age 23\n",
+      "Your age is  23\n"
      ]
     }
    ],
    "source": [
     "try:\n",
     "    age=int(input(\"Enter age \"))\n",
-    "    assert age >= 20\n",
+    "    assert age >= 18\n",
     "except AssertionError:\n",
-    "    print(\"The age should be greater or equal to 20\")\n",
+    "    print(\"The age should be greater or equal to 18\")\n",
     "except ValueError:\n",
-    "    print(\"The age should be int\")\n",
+    "    print(\"The age should be integer\")\n",
     "else:\n",
     "    print(\"Your age is \", age)"
    ]
