--- a/Inheritance.ipynb
+++ b/Inheritance.ipynb
@@ -251,8 +251,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "8d5835f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ram\n",
+      "90\n",
+      "KTM\n"
+     ]
+    }
+   ],
+   "source": [
+    "# public members\n",
+    "class Info:\n",
+    "    def __init__(self):\n",
+    "        self.name=\"Ram\"\n",
+    "        self.age=90\n",
+    "        self.add=\"KTM\"\n",
+    "        \n",
+    "obj=Info()\n",
+    "print(obj.name)\n",
+    "print(obj.age)\n",
+    "print(obj.add)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "c0d5ffd7",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Info' object has no attribute 'name'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 9\u001b[0m\n\u001b[0;32m      6\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_add\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mKTM\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      8\u001b[0m obj\u001b[38;5;241m=\u001b[39mInfo()\n\u001b[1;32m----> 9\u001b[0m \u001b[38;5;28mprint\u001b[39m(obj\u001b[38;5;241m.\u001b[39mname)\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28mprint\u001b[39m(obj\u001b[38;5;241m.\u001b[39mage)\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28mprint\u001b[39m(obj\u001b[38;5;241m.\u001b[39madd)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Info' object has no attribute 'name'"
+     ]
+    }
+   ],
+   "source": [
+    "# protected members\n",
+    "class Info:\n",
+    "    def __init__(self):\n",
+    "        self._name=\"Ram\"\n",
+    "        self._age=90\n",
+    "        self._add=\"KTM\"\n",
+    "        \n",
+    "obj=Info()\n",
+    "print(obj.name)\n",
+    "print(obj.age)\n",
+    "print(obj.add)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d4526e8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d3f5b33",
    "metadata": {},
    "outputs": [],
    "source": []
