--- a/function.ipynb
+++ b/function.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd912b15",
+   "id": "9d3b534c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32e14abd",
+   "id": "dd2032e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "edef1853",
+   "id": "c3bb56a9",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd279e25",
+   "id": "1173f703",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculator():\n",
+    "    l = int(input(\"Enter l = \"))\n",
+    "    b = int(input(\"Enter b = \"))\n",
+    "    a=l*b\n",
+    "    print(a)\n",
+    "calculator()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1a1f23b",
    "metadata": {},
    "outputs": [],
    "source": []
