--- a/function.ipynb
+++ b/function.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d3b534c",
+   "id": "9a973962",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd2032e8",
+   "id": "4ae61059",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c3bb56a9",
+   "id": "f041863e",
    "metadata": {},
    "outputs": [
     {
@@ -50,22 +50,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1173f703",
+   "id": "ca803bd1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter l = 4\n"
+     ]
+    }
+   ],
    "source": [
     "def calculator():\n",
     "    l = int(input(\"Enter l = \"))\n",
     "    b = int(input(\"Enter b = \"))\n",
+    "    h = int(input(\"Enter h = \"))\n",
     "    a=l*b\n",
+    "    v=l*b*h\n",
     "    print(a)\n",
+    "    print(v)\n",
     "calculator()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1a1f23b",
+   "id": "4ef33ac7",
    "metadata": {},
    "outputs": [],
    "source": []
