--- a/function.ipynb
+++ b/function.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a973962",
+   "id": "d9d33a48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ae61059",
+   "id": "ff8ee186",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f041863e",
+   "id": "021b9942",
    "metadata": {},
    "outputs": [
     {
@@ -49,15 +49,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ca803bd1",
+   "execution_count": 4,
+   "id": "6f20d7f6",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter l = 4\n"
+      "Enter l = 4\n",
+      "Enter b = 5\n",
+      "Enter h = 6\n",
+      "20\n",
+      "120\n"
      ]
     }
    ],
@@ -76,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ef33ac7",
+   "id": "4c497bfb",
    "metadata": {},
    "outputs": [],
    "source": []
