--- a/function.ipynb
+++ b/function.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9d33a48",
+   "id": "1b9766fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff8ee186",
+   "id": "fd55ed4e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "021b9942",
+   "id": "d70fa1b3",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6f20d7f6",
+   "id": "07581b98",
    "metadata": {},
    "outputs": [
     {
@@ -79,8 +79,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "53beb8ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter l = 8\n",
+      "Enter b = 9\n",
+      "Enter h = 8\n",
+      "72\n",
+      "576\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = int(input(\"Enter l = \"))\n",
+    "b = int(input(\"Enter b = \"))\n",
+    "h = int(input(\"Enter h = \"))\n",
+    "def cal():\n",
+    "    a=l*b\n",
+    "    v=l*b*h\n",
+    "    print(a)\n",
+    "    print(v)\n",
+    "cal()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "4c497bfb",
+   "id": "9a284beb",
    "metadata": {},
    "outputs": [],
    "source": []
