--- a/function.ipynb
+++ b/function.ipynb
@@ -109,8 +109,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "9a284beb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter l = 7\n",
+      "Enter b = 89\n",
+      "Enter h = 65\n",
+      "623\n",
+      "40495\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = int(input(\"Enter l = \"))\n",
+    "b = int(input(\"Enter b = \"))\n",
+    "h = int(input(\"Enter h = \"))\n",
+    "\n",
+    "def area():\n",
+    "    a=l*b\n",
+    "    print(a)\n",
+    "def vol():\n",
+    "    v=l*b*h\n",
+    "    print(v)\n",
+    "area()\n",
+    "vol()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9948fe2f",
    "metadata": {},
    "outputs": [],
    "source": []
