--- a/OOP.ipynb
+++ b/OOP.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "class Hello:\n",
     "    def nepal(self):\n",
-    "        print(\"Hello Nepal\")\n",
+    "        print(\"Hello Nepal.\")\n",
     "obj=Hello()\n",
     "obj.nepal()"
    ]
@@ -44,7 +44,7 @@
     "class Hello:\n",
     "    @staticmethod\n",
     "    def nepal():\n",
-    "        print(\"Hello Nepal\")\n",
+    "        print(\"Hey Nepal.\")\n",
     "obj=Hello()\n",
     "obj.nepal()"
    ]
