--- a/OOP.ipynb
+++ b/OOP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "3e47bb6c",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello Nepal\n"
+      "Hello Nepal.This is that\n"
      ]
     }
    ],
@@ -20,7 +20,7 @@
     "\n",
     "class Hello:\n",
     "    def nepal(self):\n",
-    "        print(\"Hello Nepal.\")\n",
+    "        print(\"Hello Nepal.This is that\")\n",
     "obj=Hello()\n",
     "obj.nepal()"
    ]
