--- a/Smoking_data_scrapping.ipynb
+++ b/Smoking_data_scrapping.ipynb
@@ -75,7 +75,7 @@
     {
       "cell_type": "code",
       "source": [
-        "print(soup.text)"
+        "soup.text"
       ],
       "metadata": {
         "colab": {
